[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-math-core"
version = "0.2.dev0"
description = "A Python wrapper for PyAnsys Math libraries."
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansys-mapdl-core>=0.64.0",
    "ansys-tools-path>=0.2.4",
    "pyansys-tools-versioning>=0.3.3",
    "numpy>=1.14.0",
    "importlib-metadata>=4.0,<5; python_version<='3.8'",
    "scipy>=1.3.0",  # for sparse (consider optional?)
]

[project.optional-dependencies]
tests = [
    "ansys-mapdl-core==0.67.0",
    "numpy==1.26.3",
    "scipy==1.12.0",
    "pyansys-tools-report==0.7.0",
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "pytest-rerunfailures==13.0",
    "pyvista==0.43.2",
    "vtk==9.3.0",
]
doc = [
    "Sphinx==7.2.6",
    "ansys-mapdl-core==0.67.0",
    "ansys-mapdl-reader==0.53.0",
    "ansys-sphinx-theme==0.13.1",
    "jupyter_sphinx==0.5.3",
    "jupyterlab==4.0.11",
    "numpydoc==1.6.0",
    "pypandoc==1.12",
    "pytest-sphinx==0.5.0",
    "pyvista[jupyter,trame]==0.43.2",
    "scipy==1.12.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-autodoc-typehints==1.25.2",
    "sphinx-copybutton==0.5.2",
    "sphinx-notfound-page==1.0.0",
    "sphinx-gallery==0.15.0",
    "trame==3.5.0",
    "vtk==9.3.0",
]

[tool.flit.module]
name = "ansys.math.core"

[project.urls]
Homepage = "https://github.com/ansys/pyansys-math/"
Documentation = "https://math.docs.pyansys.com"
Source = "https://github.com/ansys/pyansys-math"
Tracker = "https://github.com/ansys/pyansys-math/issues"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys/pyansys-math"]

[tool.coverage.report]
show_missing = true

[tool.codespell]
skip = '*.pyc,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,./doc/source/examples/*,*cover,*.dat,*.mac,build,./docker/mapdl/v*,./factory/*,PKG-INFO,*.mypy_cache/*,./docker/mapdl/*,./_unused/*'
ignore-words = "doc/styles/Vocab/ANSYS/accept.txt"
quiet-level = 3