[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-math-core"
version = "0.2.4"
description = "A Python wrapper for PyAnsys Math libraries."
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansys-mapdl-core>=0.64.0",
    "ansys-tools-path>=0.2.4",
    "pyansys-tools-versioning>=0.3.3",
    "numpy>=1.14.0",
    "scipy>=1.3.0",  # for sparse (consider optional?)
]

[project.optional-dependencies]
tests = [
    "ansys-mapdl-core==0.69.3",
    "numpy==2.2.4",
    "scipy==1.15.2",
    "pyansys-tools-report==0.8.2",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "pytest-rerunfailures==15.0",
    "pyvista==0.45.2",
    "vtk==9.4.2",
]
doc = [
    "Sphinx==8.1.3",
    "ansys-mapdl-core==0.69.3",
    "ansys-mapdl-reader==0.54.2",
    "ansys-sphinx-theme==1.4.2",
    "jupyter_sphinx==0.5.3",
    "jupyterlab==4.3.6",
    "numpydoc==1.8.0",
    "pypandoc==1.15",
    "pytest-sphinx==0.6.3",
    "pyvista[jupyter,trame]==0.45.2",
    "scipy==1.15.2",
    "sphinx-autobuild==2024.10.3",
    "sphinx-autodoc-typehints==3.0.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.6.1",
    "sphinx-notfound-page==1.1.0",
    "sphinx-gallery==0.19.0",
    "vtk==9.4.2",
]

[tool.flit.module]
name = "ansys.math.core"

[project.urls]
Homepage = "https://github.com/ansys/pyansys-math/"
Documentation = "https://math.docs.pyansys.com"
Source = "https://github.com/ansys/pyansys-math"
Tracker = "https://github.com/ansys/pyansys-math/issues"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys/pyansys-math"]

[tool.coverage.report]
show_missing = true

[tool.codespell]
skip = '*.pyc,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,./doc/source/examples/*,*cover,*.dat,*.mac,build,./docker/mapdl/v*,./factory/*,PKG-INFO,*.mypy_cache/*,./docker/mapdl/*,./_unused/*'
ignore-words = "doc/styles/config/vocabularies/ANSYS/accept.txt"
quiet-level = 3

[tool.towncrier]
package = "ansys.math.core"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
template = "doc/changelog.d/changelog_template.jinja"
start_string = ".. towncrier release notes start\n"
title_format = "`{version} <https://github.com/ansys/pyansys-math/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pyansys-math/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
